--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Codystar&display=swap");
+* {
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 92%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  color: #f1f3f5;
+  background-color: #343a40;
+  /* padding: 3.2rem; */
+}
